--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portifólio</title>
 </head>
 <body>
-    <div class="background">
-                <div class="menu"></div>
+    <div class="background1">
+                
         <nav>
             <ul class="cabeçalho-link">
-                <li>
-                    <a href="sobremim.html">Sobre mim</a>
-                </li>
-                <li>
-                    <a href="projetos.html">Projetos</a>
-                </li>
-                <li>
-                    <a href="contatos.html">Contato</a>
-                </li>
+                <li> <a href="sobremim.html">Sobre mim</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="contatos.html">Contato</a> </li>
             </ul><!--cabeçalho-link-->
         </nav>
 
@@ -30,12 +24,14 @@
             <h4>Olá, meu nome é</h4>
             <h1>Priscila Pacheco</h1>
             <h3> Desenvolvedora WEB </h3>
+            <p>Meu objetivo é o usuário ter uma boa experiência em realizar seu acesso tanto no desktop quanto mobile.
+            <br>Projeto layouts usando práticas de HTML/CSS e cuido dos seus mínimos detalhes.</p>
         </div><!--Main-->
     </div><!--background-->
  <!--Começo-da-seção-sobre-mim-->
     <section class="background-color-Sobre">
         <div class="main-sobre">
-            <img src="pri2.jpg">
+            <img src="./img/pri2.jpg">
             <div class="Text-sobre">
                 <h2>Sobre Mim</h2>
                 <section>
