--- a/menu restaurante.html
+++ b/menu restaurante.html
@@ -9,11 +9,11 @@
             <p><b><h1 style="color: black;">Restaurante Sabor Brasil</h1></p></b>
             <p><h2><mark> Cardápio do Dia</h2></p></mark><br>
            <b><li>Salada Caprese: </b>Tomate, Muçarela de Búfala, Manjericão.<b>Preço: R$ 15,00</b></li>
-           <img src="salada caprese.jpg" height="30%" width="20%"> 
+           <img src="./img/salada caprese.jpg" height="30%" width="20%"> 
             <b><li>Filé de Frango à Milanesa: </b>Filé de Peito de Frango empanado e frito.<b>Preço: R$ 25,00</b></li>
-            <img src="frango a milanesa.jpg" height="30%" width="20%">
+            <img src="./img/frango a milanesa.jpg" height="30%" width="20%">
             <b><li>Creme de Milho: </b> Milho in natura, Leite integral, Manteiga, Cebola e Creme de Leite.<b>Preço: R$ 12,00</b></li>
-            <img src="creme de milho.jpg" height="30%" width="20%">
+            <img src="./img/creme de milho.jpg" height="30%" width="20%">
             
         </header>
     </body>
