--- a/mural.html
+++ b/mural.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,23 +17,23 @@
         <input type="radio" name="radio-btn" id="radio5">
 
         <div class="slide first">
-            <img src="1.jpg">
+            <img src="./img/1.jpg">
         </div>
 
         <div class="slide">
-            <img src="2.jpg">
+            <img src="./img/2.jpg">
         </div>
 
         <div class="slide">
-            <img src="3.jpg">
+            <img src="./img/3.jpg">
         </div>
 
         <div class="slide">
-            <img src="4.jpg">
+            <img src="./img/4.jpg">
         </div>
 
         <div class="slide">
-            <img src="5.jpg">
+            <img src="./img/5.jpg">
         </div>
         <div class="navigation-auto">
             <div class="auto-btn1"></div>
