--- a/sobremim.html
+++ b/sobremim.html
@@ -12,7 +12,7 @@
    <!--Começo-da-seção-sobre-mim-->
    <section class="background-color-Sobre">
     <div class="main-sobre">
-        <img src="pri2.jpg">
+        <img src="./img/pri2.jpg">
         <div class="Text-sobre">
             <h2>Sobre Mim</h2>
             <section>
